Added a form to let users input their location

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Weather App</title>
   </head>
   <body>
+    <div class="weatherInput">
+      <input type="text" id="weather" class="weather_input" />
+      <label for="weather" class="weather_label">Search</label>
+    </div>
     <div class="weather-block"></div>
     <script src="script.js"></script>
   </body>
