Added styling to search bar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="weatherInput">
-      <input type="text" id="weather" class="weather_input" />
+    <div class="weatherForm">
+      <input type="text" id="weather" class="weather_input" autocomplete="off" placeholder=" "/>
       <label for="weather" class="weather_label">Search</label>
     </div>
     <div class="weather-block"></div>
